--- a/vstudio/PCbuild.vs2008/pylauncher.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/pylauncher.VS2008.vcproj
@@ -704,7 +704,7 @@
 			Name="Source Files"
 			>
 			<File
-				RelativePath="..\..\cpython\PC\launcher.c"
+				RelativePath="..\PC\launcher.c"
 				>
 			</File>
 		</Filter>
