--- a/vstudio/PCbuild.vs2008/_ctypes.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/_ctypes.VS2008.vcproj
@@ -42,7 +42,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc"
+				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc;..\..\cpython\Modules\_ctypes"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -105,7 +105,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc"
+				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc;..\..\cpython\Modules\_ctypes"
 				DisableSpecificWarnings="4267"
 			/>
 			<Tool
@@ -169,7 +169,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc"
+				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc;..\..\cpython\Modules\_ctypes"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -235,7 +235,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc"
+				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc;..\..\cpython\Modules\_ctypes"
 				DisableSpecificWarnings="4267"
 			/>
 			<Tool
@@ -301,7 +301,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc"
+				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc;..\..\cpython\Modules\_ctypes"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -364,7 +364,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc"
+				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc;..\..\cpython\Modules\_ctypes"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -427,7 +427,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc"
+				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc;..\..\cpython\Modules\_ctypes"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -490,7 +490,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc"
+				AdditionalIncludeDirectories="..\..\cpython\Modules\_ctypes\libffi_msvc;..\..\cpython\Modules\_ctypes"
 			/>
 			<Tool
 				Name="VCManagedResourceCompilerTool"
@@ -565,7 +565,7 @@
 			Name="Source Files"
 			>
 			<File
-				RelativePath="..\..\cpython\Modules\_ctypes\_ctypes.c"
+				RelativePath="..\Modules\_ctypes\_ctypes.c"
 				>
 			</File>
 			<File
