--- a/vstudio/PCbuild.vs2008/_sqlite3.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/_sqlite3.VS2008.vcproj
@@ -599,7 +599,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\cpython\Modules\_sqlite\row.c"
+				RelativePath="..\Modules\_sqlite\row.c"
 				>
 			</File>
 			<File
