--- a/vstudio/PCbuild.vs2008/pythoncore.VS2008.vcproj
+++ b/vstudio/PCbuild.vs2008/pythoncore.VS2008.vcproj
@@ -1995,7 +1995,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\PC\winreg.c"
+				RelativePath="..\..\cpython\PC\winreg.c"
 				>
 			</File>
 			<File
